--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-cayman
-title: Audio Samples from "PortaSpeech: Portable and High-QualityGenerative Text-to-Speech"
+title: "Audio Samples from \"PortaSpeech: Portable and High-QualityGenerative Text-to-Speech\""
